@@ -106,5 +106,7 @@ JDK_DIR := $($(JDK_DIR_VAR))
 
 SYS_JDK_CONFIG_FILE := $(SYS_MAKEFILE_DIR)/JDK.$(FINAL_JDK_VENDOR)_$(SITE_PLATFORM).mk
 
+DUMMY_RULE = @$(TOUCH) $(MOD_BUILD_DIR)/dummy
+
 -include $(SYS_JDK_CONFIG_FILE)
 
